--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 	</div>
 
 	<div class="content" id="article1">
+	
+		<div id="google_translate_element"></div>
+		<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+		}
+		</script>
+		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		
 		<h1>The shit</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
