--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
 	</div>
 
 	<div class="content" id="article1">
-	
-		<div id="google_translate_element"></div>
-		<script type="text/javascript">
+		
+		<div id="google_translate_element"></div><script type="text/javascript">
 		function googleTranslateElementInit() {
-			new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+  			new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 		}
-		</script>
-		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        
 		
 		<h1>The shit</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
