--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<source src="video.mp4" type="video/mp4">
 		</video>
 		
-		<h1 id="header_title">Template</h1>
+		<h1 id="header_title">The Romantic Era</h1>
 
 	</div>
 
