--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		</nav>
 		<nav id="header_navbar_links">
 			<a class="nav_main_link" href="#header">Home</a>
-			<a class="nav_main_link" href="#article1">Template</a>
-			<a class="nav_main_link" href="#article2">Template</a>
-			<a class="nav_main_link" href="#article3">Template</a>
-			<a class="nav_main_link" href="#article4">Template</a>
-			<a class="nav_main_link" href="#article5">Template</a>
+			<a class="nav_main_link" href="#article1">Introduction - Mary Shelley</a>
+			<a class="nav_main_link" href="#article2">Society</a>
+			<a class="nav_main_link" href="#article3">Science</a>
+			<a class="nav_main_link" href="#article4">Role of Women</a>
+			<a class="nav_main_link" href="#article5">Art and Music</a>
 		</nav>
 	</div>
 	<div id="header">
@@ -41,7 +41,7 @@
 		</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         
 		
-		<h1>The shit</h1>
+		<h1>Introduction - Mary Shelley</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
 		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
@@ -55,7 +55,7 @@
 		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
 	</div>
 	<div class="content" id="article2">
-		<h1>The shit</h1>
+		<h1>Society</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
 		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
@@ -69,7 +69,7 @@
 		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
 	</div>
 		<div class="content" id="article3">
-		<h1>The shit</h1>
+		<h1>Science</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
 		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
@@ -83,7 +83,7 @@
 		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
 	</div>
 		<div class="content" id="article4">
-		<h1>The shit</h1>
+		<h1>Role of Women</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
 		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
@@ -98,7 +98,7 @@
 	</div>
 	</div>
 		<div class="content" id="article5">
-		<h1>The shit</h1>
+		<h1>Art and music</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
 		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
