--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,800|Open+Sans:400" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="smooth.js"></script>
+	<script type="text/javascript" src="navhider.js"></script>
 </head>
 <body>
 
