--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
 	<div id="header">
 		<video id="header_background" autoplay autobuffer loop>
-			<source src="video.mp4" type="video/mp4">
+			<source src="Joel.mp4" type="video/mp4">
 		</video>
 		
 		<h1 id="header_title">The Romantic Era</h1>
