--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </div>
 <script>
-	$('#player').prop("volume", this.value/100);	
+$( document ).ready(function() {
+	$('#header_background').prop("volume", this.value/100);
+});	
 </script>
 </body>
 </html>
