--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</nav>
 	</div>
 	<div id="header">
-		<video id="header_background" autoplay autobuffer loop volume="0">
+		<video id="header_background" autoplay autobuffer loop muted>
 			<source src="Joel.mp4" type="video/mp4">
 		</video>
 		
