--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		</nav>
 	</div>
 	<div id="header">
-		<video id="header_background" autoplay autobuffer loop muted>
-			<source src="Joel.mp4" type="video/mp4">
+		<video id="header_background" src="Joel.mp4" autoplay loop muted>
+			
 		</video>
 		
 		<h1 id="header_title">The Romantic Era</h1>
