--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
-this.page.url = https://pierrelefevre.github.io;
-this.page.identifier = https://pierrelefevre.github.io;
+this.page.url = https:pierrelefevre.github.io;
+this.page.identifier = https:pierrelefevre.github.io;
 };
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
+	
+(function() {
 var d = document, s = d.createElement('script');
 s.src = 'https://romanticera-1.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
