--- a/index.html
+++ b/index.html
@@ -70,17 +70,19 @@
 	</div>
 	<div class="content" id="article3">
 		<h1>Science</h1>
-		<h3>Why the shit, how the shit, when the shit</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
-		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
-		Mauris convallis orci lorem, et faucibus ex consequat pharetra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean ultricies, est at sagittis fringilla, neque erat mattis leo, vitae iaculis nulla elit vel tellus. Phasellus id eleifend justo, vel rhoncus turpis. Phasellus eu euismod nunc, sit amet venenatis metus. Proin sem erat, fringilla in cursus at, luctus et ipsum. Nunc posuere imperdiet leo. Suspendisse tristique tellus sed leo auctor pellentesque. Phasellus commodo commodo ipsum id pretium. Suspendisse pretium lectus risus, ac malesuada ante tincidunt sed. Pellentesque venenatis tortor quis dictum euismod. Quisque lacus leo, bibendum at ligula eget, sagittis imperdiet mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc sagittis purus erat, rutrum vestibulum tortor sodales ac.<br><br>
-		Praesent tempus feugiat odio nec pellentesque. Donec vel imperdiet dui, ac blandit urna. Vivamus urna quam, consequat vel consequat non, sagittis in lorem. Donec ultrices felis mollis orci pellentesque, vulputate convallis risus pharetra. Cras efficitur quis sem ac blandit. Quisque cursus, ex nec pretium volutpat, nulla urna interdum ipsum, in rhoncus elit urna vel justo. Integer posuere mi eu nunc elementum porttitor. Suspendisse at risus urna. Quisque fermentum venenatis elementum. Integer sodales magna mauris, a tincidunt urna molestie molestie. Pellentesque placerat ex in rutrum mollis. Suspendisse sed ex ligula.<br><br>
-		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
-		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
-		Mauris convallis orci lorem, et faucibus ex consequat pharetra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean ultricies, est at sagittis fringilla, neque erat mattis leo, vitae iaculis nulla elit vel tellus. Phasellus id eleifend justo, vel rhoncus turpis. Phasellus eu euismod nunc, sit amet venenatis metus. Proin sem erat, fringilla in cursus at, luctus et ipsum. Nunc posuere imperdiet leo. Suspendisse tristique tellus sed leo auctor pellentesque. Phasellus commodo commodo ipsum id pretium. Suspendisse pretium lectus risus, ac malesuada ante tincidunt sed. Pellentesque venenatis tortor quis dictum euismod. Quisque lacus leo, bibendum at ligula eget, sagittis imperdiet mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc sagittis purus erat, rutrum vestibulum tortor sodales ac.<br><br>
-		Praesent tempus feugiat odio nec pellentesque. Donec vel imperdiet dui, ac blandit urna. Vivamus urna quam, consequat vel consequat non, sagittis in lorem. Donec ultrices felis mollis orci pellentesque, vulputate convallis risus pharetra. Cras efficitur quis sem ac blandit. Quisque cursus, ex nec pretium volutpat, nulla urna interdum ipsum, in rhoncus elit urna vel justo. Integer posuere mi eu nunc elementum porttitor. Suspendisse at risus urna. Quisque fermentum venenatis elementum. Integer sodales magna mauris, a tincidunt urna molestie molestie. Pellentesque placerat ex in rutrum mollis. Suspendisse sed ex ligula.<br><br>
-		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
+		<h3>What parts of the Romantic science are still relevant today?</h3>
+		<p>“Why should I care”, you may ask. Well, when looking at what the researchers achieved at the time, it is actually quite impressive how much of their discoveries and further developing of existing topics are still used and actively researched about.<br>
+		These topics include Biology, Mathematics, Physics, Astronomy, and Chemistry.<br>
+		Jean-Baptiste Lamarck was first to invent the Romantic take on Biology in 1801, which he affectionately referred to as “an independent scientific discipline […] consisting in a spreading awareness that […] living nature cannot be understood […] (by) the laws of physics”.<br>
+		At the time, the study of organic, living organisms was a new concept, which, as stated earlier, was rather revolutionary at the time. It sparked the interest in creating and working on loads of other scientific movements, like Goethe’s color science, and organic chemist
+		Most also believe that the structure of mathematics as we know them was defined during the Romantic era. Before, it was known as a logical, intuitive method to solve problems, but it was during the Romantic era that the boundaries were stretched, to the point where math became what it is known for now, theoretical and philosophical, rather than logic.<br><br>
+
+		To wrap up, the Romantic Era was a huge part of creating the scientific grounds for the discoveries of today, with most of today’s large research topics originating from the era.<br><br>
+
+		---<br>
+		The technology and Science of the Romantic Era.<br>
+		This article was written by Pierre, 16TEKCS.<br></p>
+
 	</div>
 	<div class="content" id="article4">
 		<h1>Role of Women</h1>
@@ -115,11 +117,11 @@
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
-this.page.url = https:pierrelefevre.github.io;
-this.page.identifier = https:pierrelefevre.github.io;
+this.page.url = https://pierrelefevre.github.io;
+this.page.identifier = https://pierrelefevre.github.io;
 };
-	
-(function() {
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
 s.src = 'https://romanticera-1.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
