--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@
 		Praesent tempus feugiat odio nec pellentesque. Donec vel imperdiet dui, ac blandit urna. Vivamus urna quam, consequat vel consequat non, sagittis in lorem. Donec ultrices felis mollis orci pellentesque, vulputate convallis risus pharetra. Cras efficitur quis sem ac blandit. Quisque cursus, ex nec pretium volutpat, nulla urna interdum ipsum, in rhoncus elit urna vel justo. Integer posuere mi eu nunc elementum porttitor. Suspendisse at risus urna. Quisque fermentum venenatis elementum. Integer sodales magna mauris, a tincidunt urna molestie molestie. Pellentesque placerat ex in rutrum mollis. Suspendisse sed ex ligula.<br><br>
 		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
 	</div>
-</div>
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
-this.page.url = pierrelefevre.github.io/romanticera/
-this.page.identifier = pierrelefevre.github.io/romanticera/
+this.page.url = '<?php echo get_permalink(); ?>';
+this.page.identifier = '<?php echo dsq_identifier_for_post($post); ?>';
 };
-
+*/
 (function() {
 var d = document, s = d.createElement('script');
 s.src = 'https://romanticera-1.disqus.com/embed.js';
@@ -130,5 +129,6 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
+</div>
 </body>
 </html>
