--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
 	</div>
 <div class="test">
 	<div id="disqus_thread"></div>
+	
+	<script>
+	  $(window).scroll(function(){
+	    var height = $(window).scrollTop();
+
+	    if (height>700) {
+	      $("#header_background").src=("Lucas.mp4")
+	    };
+	  })
+	</script>
+		
 	<script>
 	var disqus_config = function () {
 	this.page.url = '<?php echo get_permalink(); ?>';
