--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	    var height = $(window).scrollTop();
 
 	    if (height>700) {
-	      $("#header_background").src=("Lucas.mp4")
+	      $("#header_background").attr('src', Lucas);
 	    };
 	  })
 	</script>
