--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	
 	<script>
 	 $("#society").click(function(){
-	     $("#header_background").attr('src', "joel.mp4");
+	     $("#header_background").attr('src', "Joel.mp4");
 	  })
 		
 	 $("#science").click(function(){
@@ -128,7 +128,7 @@
 	  })
 		
 	 $("#society").click(function(){
-	      $("#header_background").attr('src', "Melvin.mp4");
+	      $("#header_background").attr('src', "melvin.mp4");
 	  })
 	</script>
 	
