--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	      $("#header_background").attr('src', "Lucas.mp4");
 	  })
 		
-	 $("#society").click(function(){
+	 $("#art").click(function(){
 	      $("#header_background").attr('src', "melvin.mp4");
 	  })
 	</script>
