--- a/index.html
+++ b/index.html
@@ -128,23 +128,20 @@
 	  })
 	</script>
 	
-	<div id="disqus_thread"></div>
-<script>
-  	var disqus_config = function () {
-        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
+	<div id="disqus_thread"></div>	
+	<script>
+	var disqus_config = function () {
+	this.page.url = 'pierrelefevre.github.io';
+	this.page.identifier = '/romanticera/';
+	};
+	(function() {
+	var d = document, s = d.createElement('script');
+	s.src = 'https://romanticera-1.disqus.com/embed.js';
+	s.setAttribute('data-timestamp', +new Date());
+	(d.head || d.body).appendChild(s);
+	})();	
+	</script>
 
-    (function() {  // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        
-        s.src = 'https://romanticera-1.disqus.com/embed.js';
-        
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </div>
 </body>
 </html>
