--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="smooth.js"></script>
 	<script type="text/javascript" src="navhider.js"></script>
+	<script type="text/javascript" src="hideme.js"></script>
 </head>
 <body>
 
