--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>Romantic Era</title>
-	<link rel="stylesheet" type="text/css" href="omniV1.css">
+	<link rel="stylesheet" type="text/css" href="./style/omniV1.css">
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,800|Open+Sans:400" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="smooth.js"></script>
-	<script type="text/javascript" src="navhider.js"></script>
-	<script type="text/javascript" src="hideme.js"></script>
+	<script type="text/javascript" src="./script/smooth.js"></script>
+	<script type="text/javascript" src="./script/navhider.js"></script>
+	<script type="text/javascript" src="./script/hideme.js"></script>
 </head>
 <body>
 
