--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		Praesent tempus feugiat odio nec pellentesque. Donec vel imperdiet dui, ac blandit urna. Vivamus urna quam, consequat vel consequat non, sagittis in lorem. Donec ultrices felis mollis orci pellentesque, vulputate convallis risus pharetra. Cras efficitur quis sem ac blandit. Quisque cursus, ex nec pretium volutpat, nulla urna interdum ipsum, in rhoncus elit urna vel justo. Integer posuere mi eu nunc elementum porttitor. Suspendisse at risus urna. Quisque fermentum venenatis elementum. Integer sodales magna mauris, a tincidunt urna molestie molestie. Pellentesque placerat ex in rutrum mollis. Suspendisse sed ex ligula.<br><br>
 		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
 	</div>
-	<div class="content" id="article2">
+	<div class="content hideme" id="article2">
 		<h1>Society</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>The urbanisation has started and people were desperate to move in to the big cities to find jobs, working on the farm was no longer profitable and the city life was the best for the family. They moved to a dirty and poor city, and diseases started, this was a though period. 
@@ -65,7 +65,7 @@
 		The theatre under this era was about emotions and what people had experienced in their lives, It was all about good things and never about taboo things like sex and dead bodies for example. The theatre was not the biggest in literature at this moment, because it was so many who read novels because that was the biggest around.
 		To round up this text, the romantic period was a bad time for the people who struggled a lot, the rich was the ones who ruled and had the power. The urbanisation was in its full movement and the big cities started to form, the life on the farms was no longer an option if you wanted to survive.</p>
 	</div>
-	<div class="content" id="article3">
+	<div class="content hideme" id="article3">
 		<h1>Science</h1>
 		<h3>What parts of the Romantic science are still relevant today?</h3>
 		<p>“Why should I care”, you may ask. Well, when looking at what the researchers achieved at the time, it is actually quite impressive how much of their discoveries and further developing of existing topics are still used and actively researched about.<br>
@@ -81,7 +81,7 @@
 		This article was written by Pierre, 16TEKCS.<br></p>
 
 	</div>
-	<div class="content" id="article4">
+	<div class="content hideme" id="article4">
 		<h1>Role of Women</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
@@ -96,7 +96,7 @@
 		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
 	</div>
 	</div>
-		<div class="content" id="article5">
+		<div class="content hideme" id="article5">
 		<h1>Art and music</h1>
 		<h3>Why the shit, how the shit, when the shit</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
