--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+	<h1 id="contentPreLoader">Loading content <span id="contentLiveLoader">...</span></h1>
+
 <div class="wrapper">
 	<div id="header_navbar">
 		<nav>
