--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 	
 	<div class="content hideme showMeBottom viewed" id="article1">
 		<h1>Introduction - Mary Shelley</h1>
-		<h3>Why the shit, how the shit, when the shit</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
-		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
-		Mauris convallis orci lorem, et faucibus ex consequat pharetra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean ultricies, est at sagittis fringilla, neque erat mattis leo, vitae iaculis nulla elit vel tellus. Phasellus id eleifend justo, vel rhoncus turpis. Phasellus eu euismod nunc, sit amet venenatis metus. Proin sem erat, fringilla in cursus at, luctus et ipsum. Nunc posuere imperdiet leo. Suspendisse tristique tellus sed leo auctor pellentesque. Phasellus commodo commodo ipsum id pretium. Suspendisse pretium lectus risus, ac malesuada ante tincidunt sed. Pellentesque venenatis tortor quis dictum euismod. Quisque lacus leo, bibendum at ligula eget, sagittis imperdiet mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc sagittis purus erat, rutrum vestibulum tortor sodales ac.<br><br>
-		esent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
-		</p>
+		<h3>Phew, you made it here!</h3>
+		
+		<p>It seems like you wanted to learn more about what the technology and science scene looked like back in the Romantic era.</p>
+		<p>As you may already know, the Romantic era, or age of reflection, was huge when it comes to scientists and intellectuals coming forward with their thoughts and discoveries.  Just as everyone was getting tired of the enlightment’s boring structure, the Romantic Era peeked its nose.</p>
+		<br><br>
+		<h3>Mary Shelley</h3>
+		<br><br>
 	</div>
 	<div class="content hideme showMeLeft" id="article2">
 		<h1>Society</h1>
