--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-	<h1 id="contentPreLoader">Loading content <span id="contentLiveLoader">...</span></h1>
+	<h1 id="contentPreLoader">Loading <span id="contentLiveLoader">...</span></h1>
 
 <div class="wrapper">
 	<div id="header_navbar">
