--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 		</nav>
 	</div>
 	<div id="header">
-		<video id="header_background" src="Joel.mp4" autoplay loop muted>
-			
-		</video>
+		<video id="header_background" src="Joel.mp4" autoplay loop muted preload="auto"></video>
 		
+		<!-- Pre-loading videos for later use-->
+		<video style="display:none" src="Lucas.mp4" muted preload="auto"></video>
+		<video id="header_background" src="Pierre.mp4" muted preload="auto"></video>
+		<video id="header_background" src="melvin.mp4" muted preload="auto"></video>
+		<video id="header_background" src="Joel.mp4" muted preload="auto"></video>
+		<!-- Done Pre-loading -->
 		<h1 id="header_title">The Romantic Era</h1>
 
 	</div>
