--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 		
 		<!-- Pre-loading videos for later use-->
 		<video style="display:none" src="Lucas.mp4" muted preload="auto"></video>
-		<video id="header_background" src="Pierre.mp4" muted preload="auto"></video>
-		<video id="header_background" src="melvin.mp4" muted preload="auto"></video>
-		<video id="header_background" src="Joel.mp4" muted preload="auto"></video>
+		<video style="display:none" src="Pierre.mp4" muted preload="auto"></video>
+		<video style="display:none" src="melvin.mp4" muted preload="auto"></video>
+		<video style="display:none" src="Joel.mp4" muted preload="auto"></video>
 		<!-- Done Pre-loading -->
 		<h1 id="header_title">The Romantic Era</h1>
 
