--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 	  })
 	</script>
 	
+	<div class="box"
 	<div id="disqus_thread"></div>	
 	<script>
 		var disqus_config = function () {
@@ -137,7 +138,7 @@
 		(d.head || d.body).appendChild(s);
 		})();	
 	</script>
-
+	</div>
 </div>
 </body>
 </html>
