--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	  })
 	</script>
 	
-	<div class="box"
+	<div class="box">
 	<div id="disqus_thread"></div>	
 	<script>
 		var disqus_config = function () {
