--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 	<div id="disqus_thread"></div>	
 	<script>
 		var disqus_config = function () {
-		this.page.url = 'pierrelefevre.github.io';
-		this.page.identifier = '/romanticera/';
+		this.page.url = PAGE_URL;
+		this.page.identifier = PAGE_IDENTIFIER;
 		};
 		(function() {
 		var d = document, s = d.createElement('script');
