--- a/index.html
+++ b/index.html
@@ -59,13 +59,18 @@
 	</div>
 	<div class="content hideme showMeLeft" id="article2">
 		<h1>Society</h1>
-		<h3>Why the shit, how the shit, when the shit</h3>
-		<p>The urbanisation has started and people were desperate to move in to the big cities to find jobs, working on the farm was no longer profitable and the city life was the best for the family. They moved to a dirty and poor city, and diseases started, this was a though period. 
-		England under this era was very poor, many people started moving in to the city and people needed jobs, so artists and writers was a good opportunity to get a job at this time. People like Mary Shelley that came from a rich family had obviously better opportunities to produce books because of her father who were a philosopher. And could support Mary in her writing. There were people who had a harder life and who fought against diseases and just to survive.
-		The farm that many people lived and worked at was a bad idea and the people wanted something new in their lives, so they started the urbanisation and at this moment this was in full movement as everyone wanted to live in the cities.
+		<h3>The people started to move.</h3>
+		<p>The urbanisation has started and people were desperate to move in to the big cities to find jobs, working on the farm was no longer profitable and the city life was the best for the family. 
+		They moved to a dirty and poor city, and diseases started, this was a though period.</p>
+		<p>England under this era was very poor, many people started moving in to the city and people needed jobs, so artists and writers was a good opportunity to get a job at this time. 
+		People like Mary Shelley that came from a rich family had obviously better opportunities to produce books because of her father who were a philosopher.
+		And could support Mary in her writing. There were people who had a harder life and who fought against diseases and just to survive.</p>
+		<p>The farm that many people lived and worked at was a bad idea and the people wanted something new in their lives, so they started the urbanisation and at this moment this was in full movement as everyone wanted to live in the cities.
 		As I mentioned before this was a hard time and there was problems finding jobs so people had so much spare time to do what they wanted, and with all creativity they could create art. 
-		The theatre under this era was about emotions and what people had experienced in their lives, It was all about good things and never about taboo things like sex and dead bodies for example. The theatre was not the biggest in literature at this moment, because it was so many who read novels because that was the biggest around.
-		To round up this text, the romantic period was a bad time for the people who struggled a lot, the rich was the ones who ruled and had the power. The urbanisation was in its full movement and the big cities started to form, the life on the farms was no longer an option if you wanted to survive.</p>
+		The theatre under this era was about emotions and what people had experienced in their lives, It was all about good things and never about taboo things like sex and dead bodies for example.</p>
+		<p>The theatre was not the biggest in literature at this moment, because it was so many who read novels because that was the biggest around.
+		To round up this text, the romantic period was a bad time for the people who struggled a lot, the rich was the ones who ruled and had the power. 
+		The urbanisation was in its full movement and the big cities started to form, the life on the farms was no longer an option if you wanted to survive.</p>
 	</div>
 	<div class="content hideme showMeRight" id="article3">
 		<h1>Science</h1>
