--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	function googleTranslateElementInit() {
 		new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 	}
-	</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" document.getElementsByTagName("frameset")[0].rows="0,*;></script>
+	</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	
 	<div class="content hideme showMeBottom viewed" id="article1">
 		<h1>Introduction - Mary Shelley</h1>
