--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 		<nav>
 			<a class="nav_main_link" id="nav_title_link" href="#header">The Romantic Era</a>
 		</nav>
-		<nav id="header_navbar_links">
+		<header id="header_navbar_links">
 			<a class="nav_main_link" href="#header">Home</a>
 			<a class="nav_main_link" href="#article1">Introduction - Mary Shelley</a>
 			<a class="nav_main_link" id="society" href="#article2">Society</a>
 			<a class="nav_main_link" id="science" href="#article3">Science</a>
 			<a class="nav_main_link" id="woman" href="#article4">Role of Women</a>
 			<a class="nav_main_link" id="art" href="#article5">Art and Music</a>
-		</nav>
+		</header>
 	</div>
 	<div id="header">
 		<video id="header_background" src="Joel.mp4" autoplay loop muted preload="auto"></video>
