--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	</div>
 	<div class="content hideme showMeRight" id="article3">
 		<h1>Science</h1>
-		<h3>What characterizes the Romantic Era in general?</h3>
+		<h3>What characterizes the Romantic Era in science?</h3>
 		<p>As the name states, during the Romantic Era, people romanticized things to no end. The Technology and Science scene was no different. The largest difference between the Enlightment era with its knowledge-based research, and the Romantic Era with its more organic approach to research with a huge emphasis on the whole of things, rather than the nitty-gritty stuff.<br><br>
 		Another idea advanced by Romanticism is the emphasis on the scientists, as at that time, it was believed that the amount of knowledge that the scientist had about the subject added value to the research, as it meant that more could be understood and more information could be collected and used. This movement within the science scene originated from Friedrich Schelling’s “Naturphilosophie”.<br>
 		In countries like Great Britain and Germany, the focus of most scientists changed from researching the more obvious, physical things, to understanding the human intelligence and its capacities.<br><br></p>
